@@ -145,7 +145,7 @@ The hwloc core may also benefit from the following development packages:
   It is also available within nvidia-settings from ftp://download.nvidia.com/XFree86/nvidia-settings/
   and https://github.com/NVIDIA/nvidia-settings/ .
 </li>
-<li>the ROCm SMI library for RSMI device discovery.
+<li>the AMD ROCm SMI library for RSMI device discovery.
   The relevant development package is usually <tt>rocm-smi-lib64</tt>
   or <tt>librocm-smi-dev</tt>.
 </li>
@@ -1463,7 +1463,7 @@ components when I/O discovery is enabled and supported.
 <li>GPUs (::HWLOC_OBJ_OSDEV_GPU)
  <ul>
  <li><em>rsmi0</em> for the first RSMI device
-  (RSMI component, using the ROCm SMI library)</li>
+  (RSMI component, using the AMD ROCm SMI library)</li>
  <li><em>nvml0</em> for the first NVML device
   (NVML component, using the NVIDIA Management Library)</li>
  <li><em>:0.0</em> for the first display
@@ -1882,7 +1882,7 @@ and SectorSize (in bytes).
 <dd>The number of compute units and global memory size (in kB) of an OpenCL device.
 </dd>
 <dt>AMDUUID, AMDSerial (RSMI GPU OS devices)</dt>
-<dd>The UUID and Serial of AMD GPUs.
+<dd>The UUID and serial number of AMD GPUs.
 </dd>
 <dt>NVIDIAUUID, NVIDIASerial (NVML GPU OS devices)</dt>
 <dd>The UUID and Serial of NVIDIA GPUs.
@@ -2301,6 +2301,14 @@ enabled for the current topology.
   information (if I/O device discovery is enabled).
  </dd>
 
+<dt>AMD ROCm SMI Library (RSMI)</dt>
+ <dd>
+  hwloc/rsmi.h enables interoperability with the AMD ROCm SMI interface.
+  It may return the list of processors near an AMD GPU.
+  It may also return the corresponding OS device hwloc object for further
+  information (if I/O device discovery is enabled).
+ </dd>
+
 <dt>NVIDIA CUDA</dt>
  <dd>
   hwloc/cuda.h and hwloc/cudart.h enable interoperability with
@@ -2638,7 +2646,7 @@ environment variable (see \ref envvar).
 <dt>rsmi</dt>
 <dd>
  This component creates GPU OS device objects such as
- <em>rsmi0</em>.
+ <em>rsmi0</em> for describing AMD GPUs.
  <b>It may be built as a plugin</b>.
 </dd>
 <dt>cuda</dt>
