@@ -20,8 +20,9 @@ bug fixes (and other actions) for each version of hwloc since version
 Version 2.3.0
 -------------
 * Backends
-  + Add a ROCm SMI backend for getting the locality of AMD GPUs as "rsmi"
-    OS devices. Thanks to Mike Li.
+  + Add a ROCm SMI backend and a hwloc/rsmi.h helper file for getting
+    the locality of AMD GPUs, now exposed as "rsmi" OS devices.
+    Thanks to Mike Li.
 * Tools
   + Command-line options for specifying flags now understand comma-separated
     lists of flag names (substrings).
